--- a/cx560/index.html
+++ b/cx560/index.html
@@ -5,36 +5,35 @@
 <title>环保</title>
 <style type="text/css">
 body,td,th {
-	color: rgba(21,237,21,1);
-	font-size: 36px;
-	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
+    color: rgba(21,237,21,1);
+    font-size: 36px;
+    font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
 }
 body {
-	background-image: url(
+    background-image: url(
 %E6%9C%89%E5%85%B3%E6%9D%90%E6%96%99/th%20(1).jpg);
-	background-repeat: repeat;
+    background-repeat: repeat;
 }
 a:link {
-	color: rgba(0,0,255,1);
+    color: rgba(0,0,255,1);
 }
 a:active {
-	color: rgba(255,0,0,1);
+    color: rgba(255,0,0,1);
 }
-/* 为第一行第二列设置背景 */
+    /* 为第一行第二列设置背景 */
 .first-row-second-column {
-    background-image: url('cx560/image/OIP (1).jpg');
+    background-image: url('有关材料/OIP (1).jpg');
     background-size: cover; /* 背景图像覆盖整个单元格 */
     background-position: center; /* 背景图像居中 */
     background-repeat: no-repeat; /* 禁止背景图像重复 */
-}
 </style>
 </head>
 
-<body bgcolor="#FFFFFF" background="cx560/image/OIP (1).jpg" leftmargin="200" topmargin="20">
+<body bgcolor="#FFFFFF" background="有关材料/OIP (1).jpg" leftmargin="200" topmargin="20">
 <table width="1000" border="0" style="">
   <tbody>
     <tr>
-      <td width="720"><h3><img src="cx560/image/2A84376DE56035B132B60E172B4B7AF5.JPG" width="720" height="480" alt=""/></h3></td>
+      <td width="720"><h3><img src="有关材料/2A84376DE56035B132B60E172B4B7AF5.JPG" width="720" height="480" alt=""/></h3></td>
       <td width="222" bgcolor="#FFFFFF"><h3>保护环境，从我做起。节约资源，减少污染，让地球更绿，天空更蓝。<br>
       </h3></td>
     </tr>
@@ -44,13 +43,5 @@ a:active {
     </tr>
   </tbody>
 </table>
-
-<!-- 返回按钮 -->
-<div style="margin-top: 20px; text-align: center;">
-  <button style="font-size: 18px; padding: 10px 20px;" onclick="window.location.href='https://caoxuan5211.github.io/cs2402-211-homework/'">
-    返回
-  </button>
-</div>
-
 </body>
 </html>
