--- a/cx560/index.html
+++ b/cx560/index.html
@@ -22,18 +22,18 @@ a:active {
 }
     /* 为第一行第二列设置背景 */
 .first-row-second-column {
-    background-image: url('有关材料/OIP (1).jpg');
+    background-image: url('image/OIP (1).jpg');
     background-size: cover; /* 背景图像覆盖整个单元格 */
     background-position: center; /* 背景图像居中 */
     background-repeat: no-repeat; /* 禁止背景图像重复 */
 </style>
 </head>
 
-<body bgcolor="#FFFFFF" background="有关材料/OIP (1).jpg" leftmargin="200" topmargin="20">
+<body bgcolor="#FFFFFF" background="image/OIP (1).jpg" leftmargin="200" topmargin="20">
 <table width="1000" border="0" style="">
   <tbody>
     <tr>
-      <td width="720"><h3><img src="有关材料/2A84376DE56035B132B60E172B4B7AF5.JPG" width="720" height="480" alt=""/></h3></td>
+      <td width="720"><h3><img src="image/2A84376DE56035B132B60E172B4B7AF5.JPG" width="720" height="480" alt=""/></h3></td>
       <td width="222" bgcolor="#FFFFFF"><h3>保护环境，从我做起。节约资源，减少污染，让地球更绿，天空更蓝。<br>
       </h3></td>
     </tr>
